
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u_int ;
typedef int u_char ;


 int strlen (char*) ;
 int strtoul (char*,char**,int) ;

int str_to_macaddr(char *str, u_char *dst){
  char *inv,*s;
  int a;
  u_int tmp;

 if(str == ((void*)0) || strlen(str) < 11) return 0;
 s=str;
 for( a=0; a < 6; a++){
    tmp=strtoul(s,&inv,16);
    if( (*inv != ':' && *inv!=0) || tmp < 0x00 || tmp > 0xff )
     return 0;

    dst[a]=tmp;
    s=++inv;
 }


 return 1;

}
